--- a/nyan/style.css
+++ b/nyan/style.css
@@ -10,7 +10,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  /*background: #036;*/
+  background: none transparent;
   overflow: hidden;
 }
 body {
